[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/QuantumCell.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Cell.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 55.8409, 56.3841 )

[node name="Cell" type="Area2D" groups=["cells"]]
position = Vector2( 60.1592, 56.476 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sign" type="Sprite" parent="."]
visible = false

[node name="Placeholder" parent="." instance=ExtResource( 1 )]
position = Vector2( -37.1592, -33.476 )

[node name="Highlight" type="Node2D" parent="."]
visible = false

[node name="ColorRect1" type="ColorRect" parent="Highlight"]
margin_left = -60.1592
margin_top = -56.476
margin_right = 55.8408
margin_bottom = -51.476
color = Color( 0.388235, 0.431373, 0.482353, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="Highlight"]
margin_left = -59.1592
margin_top = 51.524
margin_right = 56.8408
margin_bottom = 56.524
color = Color( 0.388235, 0.431373, 0.482353, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="Highlight"]
margin_left = -60.0
margin_top = -56.0
margin_right = -54.0
margin_bottom = 57.0
color = Color( 0.388235, 0.431373, 0.482353, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect4" type="ColorRect" parent="Highlight"]
margin_left = 50.8408
margin_top = -56.476
margin_right = 56.8408
margin_bottom = 56.524
color = Color( 0.388235, 0.431373, 0.482353, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
